--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "start": "node ./src/index.js",
     "dev": "nodemon --ext js,json,ts ./src/index.js",
     "format": "prettier --write .",
-    "devdb": "node ./src/syncdb.js",
-    "seeddb": "node ./src/utils/seed.js"
+    "devdb": "node ./src/syncdb.js"
   },
   "keywords": [],
   "author": "",
