--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "type": "commonjs",
   "dependencies": {
     "commandkit": "^0.1.10",
+    "cron": "^3.1.7",
     "discord.js": "^14.15.3",
     "dotenv": "^16.4.5",
     "nodemon": "^3.1.4",
